Fix: OKR チャートホバー時に表示されるツールチップが右隣のチャートより裏にある (z-index を指定する)

--- a/app/assets/stylesheets/components/okr_pie_chart.scss
+++ b/app/assets/stylesheets/components/okr_pie_chart.scss
@@ -23,5 +23,10 @@
     .recharts-tooltip-item-value {
       color: indianred;
     }
+
+    .recharts-tooltip-wrapper {
+      font-size: .9rem;
+      z-index: 1000;
+    }
   }
 }
